# Ai-Robo-Dog

./: .gitignore  AGENTS.md  ARCHITECTURE.md  BUILD_LOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE.md  PLAN.md  README.md  SECURITY.md  config.yaml  main.py  pyproject.toml  secrets.env.example  start.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
aidog/: agent.py  config.py  hardware.py  i18n.py  log.py
aidog/audio/: recorder.py  stt.py  wake.py
aidog/led/: __init__.py  controller.py
aidog/llm/: __init__.py  client.py  prompt.py  schema.py
aidog/memory/: __init__.py
aidog/netcfg/: __init__.py  manager.py  nm.py
aidog/netcfg/portal/: server.py
aidog/netcfg/portal/static/: index.html
aidog/sensors/: battery.py  bus.py  sound_direction.py  touch.py  ultrasonic.py  wake_thread.py
aidog/skills/: __init__.py  expressions.py  head.py  locomotion.py  memory.py  mood.py  perception.py  postures.py  registry.py  tricks.py  vocal.py
aidog/web/: runner.py  server.py
aidog/web/static/: index.html
deploy/: ai-robo-dog-netcfg.service  ai-robo-dog.service
