[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aidog"
version = "0.1.0"
description = "LLM-driven dog-behavior agent for SunFounder PiDog v2"
requires-python = ">=3.11"
dependencies = [
  "pyyaml>=6.0",
  "python-dotenv>=1.0",
  "openai>=2.36.0",
  # Coming in later phases:
  # "vosk>=0.3.45", "pyaudio", "webrtcvad", "numpy"
  # System-installed via SunFounder, visible through --system-site-packages:
  # pidog, vilib, robot_hat
  "webrtcvad>=2.0.10",
  "vosk>=0.3.45",
  "fastapi>=0.136.1",
  "uvicorn[standard]>=0.47.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["aidog*"]

[tool.uv]
# Use the system Python (3.13) — it carries hardware bindings (smbus2, etc.)
# that uv-managed Pythons can't replicate without extra apt packages.
python-preference = "only-system"
# pidog, vilib, robot_hat are installed system-wide via SunFounder's installer.
# The venv is created with --system-site-packages so those stay visible.

